cargo_out.txt
    Checking poly-apex-copy v0.1.0 (D:\Poly Projects\New Era\Beast-Copy)
warning: unused import: `rust_decimal::Decimal`
 --> src\execution\settlement.rs:9:5
  |
9 | use rust_decimal::Decimal;
  |     ^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0382]: borrow of partially moved value: `self`
   --> src\engines\copy_engine.rs:108:21
    |
104 |         let mut trade_rx = self.trade_rx;
    |                            ------------- value partially moved here
...
108 |                     self.process_trade(event).await;
    |                     ^^^^ value borrowed here after partial move
    |
    = note: partial move occurs because `self.trade_rx` has type `tokio::sync::broadcast::Receiver<TradeEvent>`, which does not implement the `Copy` trait

warning: unused variable: `my_wallet`
  --> src\engines\copy_engine.rs:65:21
   |
65 |                 let my_wallet = "0x0000000000000000000000000000000000000000"; // Should come from config or ENV
   |                     ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_my_wallet`
   |
   = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `pkey`
  --> src\engines\copy_engine.rs:66:21
   |
66 |                 let pkey = std::env::var("WALLET_PRIVATE_KEY").unwrap_or_default();
   |                     ^^^^ help: if this is intentional, prefix it with an underscore: `_pkey`

For more information about this error, try `rustc --explain E0382`.
warning: `poly-apex-copy` (bin "poly-apex-copy") generated 3 warnings
error: could not compile `poly-apex-copy` (bin "poly-apex-copy") due to 1 previous error; 3 warnings emitted
